{
    "name": "Controller",
    "maps": [
        {
            "name": "ControlCamera",
            "id": "bb818673-69d1-4a68-80df-952ebed8f3f1",
            "actions": [
                {
                    "name": "RightHand",
                    "type": "Value",
                    "id": "780fd5e4-70eb-4571-a452-7512f8821818",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftHand",
                    "type": "Value",
                    "id": "bd066df5-5357-446b-b641-7b06ee3d72ea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightHandCharacterChange",
                    "type": "Button",
                    "id": "6547572e-08ea-4e32-a44c-195a5518df86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftHandCharacterChange",
                    "type": "Button",
                    "id": "12bc5ecb-a0d5-421e-a5b2-05b40a2ee312",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHandTurnRight",
                    "type": "Button",
                    "id": "8e367309-f4fb-4f7d-b444-5e6133013446",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHandTurnLeft",
                    "type": "Button",
                    "id": "53bf09a7-183c-40d6-932d-3735f19beae1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftHandTurnRight",
                    "type": "Button",
                    "id": "5ac17b26-dca9-41c1-8e87-3ca69972be1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftHandTurnLeft",
                    "type": "Button",
                    "id": "02e65b00-def1-422f-a5f9-38a94f61d095",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RigthHandShoulder",
                    "type": "Button",
                    "id": "6ee81562-7f40-48d9-8a32-261beb726ba6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeaveShoulder",
                    "type": "Button",
                    "id": "ea87e502-bce0-4360-868b-7cc9610854b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectedEnemy",
                    "type": "Button",
                    "id": "97a87f6e-4f52-4d31-a45e-09386dceed23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectedEnemyLeftHand",
                    "type": "Button",
                    "id": "d8eb4e1e-2504-49ad-9b3e-7e65146c5bc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "9f8e124c-0fca-4102-a659-472181a45196",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHand",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e24abba0-7b7e-4e56-97e5-04d597a6f1b4",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHand",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5f422d47-5a51-4bf5-a539-706cbac13ae8",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHand",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4511ea59-627e-48db-ae6b-c2fb47e21c42",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHand",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ef2d5a7b-9c21-4e70-8af4-2463b285165f",
                    "path": "<Keyboard>/semicolon",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHand",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b5bd8200-9063-4c40-8691-aa199c67dedf",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "be9cea37-1cb4-4179-9222-be6da1748688",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHand",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "7a55c936-47e0-44f4-8407-5adae0084c1e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHand",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "98a2e5ad-c1f1-4cd5-b3ff-9951a72db95a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHand",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "349a35dc-2de0-4aed-9450-d711a6dfe39b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHand",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "173717d1-8170-440e-af9c-83a80d24bfbc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHand",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7ae29af8-367f-4ce2-89b5-342fad37d1c0",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65e40c19-aa93-4b7d-b15d-875edada768d",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandCharacterChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10ce332c-009c-414c-b836-186e5c88416d",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandCharacterChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c58dcd7-9bce-4374-98bd-1892c77b0e8b",
                    "path": "<Keyboard>/#(^$)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandCharacterChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "348f559a-865f-4148-87bd-9ee57e6d90b1",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandCharacterChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6442aff-e5d5-47af-81e4-81d82c365317",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandTurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "818e2fb7-2ba6-4196-94fa-f2b7340a1ae2",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandTurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "375b3e69-40cb-4a90-8582-ea208986a749",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandTurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6acb37c4-311b-43af-954d-80721c036e44",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandTurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "175d3384-fc8f-4067-a89c-235d4d86c64c",
                    "path": "<XInputController>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandTurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ca58e3e-0f50-46a1-a7b0-18d4a7b710fc",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandTurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72bc9856-3c10-4096-825c-47c88abaf69e",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandTurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85e90ec6-125d-4cfe-be8d-d1862aa9dd99",
                    "path": "<XInputController>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandTurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4daade85-ed33-4a4a-a79a-8a55bc8eb024",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RigthHandShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ada7c13a-a2fd-4242-b116-562b5bfacd09",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RigthHandShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e247677-75f7-4b77-aa4f-55fcf61fd93a",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RigthHandShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ba123ab-2d8c-4b4b-a0af-3ce3344447ac",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RigthHandShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f78bbc11-4d78-4556-a526-411d69614252",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RigthHandShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0eb69d3c-5b56-4fa2-ab36-6041e99f0586",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RigthHandShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c9aff4b-c0af-49e5-be87-b6d1ea8a2326",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RigthHandShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce81952d-8cc2-4614-9306-553425dbfe30",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RigthHandShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d777fdb8-47e9-477e-8a49-2118f1ca3f5c",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RigthHandShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66593417-89c0-4b44-b6d0-aa4de6ebbabb",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RigthHandShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7106d402-6c50-4ceb-a582-d7a8a7f7d81b",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectedEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b86202ce-e7ff-49a5-b5e9-f9af8c9409ba",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeaveShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36117abd-d397-4d5a-9ad3-35209c35241b",
                    "path": "<Keyboard>/#(^$)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectedEnemyLeftHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TestGrid",
            "id": "7c03d42c-b43a-47bd-8814-bbdd97e34f23",
            "actions": [
                {
                    "name": "Action",
                    "type": "Value",
                    "id": "b8b899ce-ea91-48a2-89ff-545448bc8e86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Echap",
                    "type": "Value",
                    "id": "f5562c65-f0d2-4cc9-bbd1-9019de00985c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "04e27089-700f-4606-87e9-0199e8663d55",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Moving",
                    "type": "Value",
                    "id": "af2c13c7-b3dc-43b9-8241-b58654ebcd6f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f230c952-bd09-4c7b-ac63-c96650d7db16",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25ad0f74-3a83-4d15-bdf9-2bd400bceb30",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0aa2759-e84a-46f4-9e72-a37e52dae94e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abf60b9c-79d9-44ef-8be7-fcd0403b9e04",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Echap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}
